--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-calendars": "^1.1291.1",
+    "react-native-email": "^2.1.0",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-open-maps": "^0.4.0",
+    "react-native-phone-call": "^1.2.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-step-indicator": "^1.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/nodemailer": "^6.4.7"
   },
   "private": true
 }
