--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-firebase/firestore": "^16.4.6",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/bottom-tabs": "^6.4.1",
     "@react-navigation/drawer": "^6.5.1",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
     "expo": "~47.0.8",
+    "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
@@ -30,8 +32,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-step-indicator": "^1.0.3",
-    "expo-app-loading": "~2.1.1"
+    "react-native-step-indicator": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
