--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "test": "jest",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|native-notify)"
+    ]
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
@@ -23,7 +30,7 @@
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.14.0",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-calendars": "^1.1291.1",
     "react-native-email": "^2.1.0",
     "react-native-gesture-handler": "~2.8.0",
@@ -36,7 +43,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/nodemailer": "^6.4.7"
+    "@types/nodemailer": "^6.4.7",
+    "jest": "^29.5.0",
+    "jest-expo": "^48.0.2",
+    "react-native-mock-render": "^0.1.9",
+    "react-test-renderer": "^18.2.0"
   },
   "private": true
 }
